tests/fixtures/invalid/bytes_pow_dict.py
# Cannot power Bytes and Dict[str, int]
x: bytes = b"hello" ** {"a": 1}
